{{$NEXT}}

1.000008 2017-07-21

- Fixed call to instantiate AskPullRequestQuestions object.

1.000007 2017-07-04

- I should pull before releasing. :(


1.000006 2017-07-04

- Fixed tests so that they do not fail on systems without git installed.


1.000005 2017-06-22

- The namespace used for question classes is now configurable via the
  `git.submit-work.question-namespaces` config item. This can contain multiple
  namespaces separated by a space too.


1.000004 2017-05-24

- Documentation improvements only. No code changes.


1.000003 2017-05-18

- Removed the use List::Gather. This seems to be the most likely culprit for
  some very odd test failures seen with threaded versions of Perl. See
  https://rt.cpan.org/Ticket/Display.html?id=121777 for details.


1.000002 2017-05-04

- The "--project" CLI argument is now optional. By default all projects are
  searched for stories which can be delivered.


1.000001 2017-04-26

- Add IPC::System::Simple as a prereq for the benefit of autodie. Reported by
  Slaven Rezić. RT #121377.


1.000000 2017-04-24

- First public release.