@@ -15,7 +15,8 @@ pod_coverage_skip = App::GHPT::Wrapper::OurMoose::Role
 pod_coverage_skip = App::GHPT::Wrapper::OurMooseX::Role::Parameterized
 pod_coverage_skip = App::GHPT::Wrapper::OurMooseX::Role::Parameterized::Meta::Trait::Parameterizable::Strict
 stopwords = GHE
-stopwords = OAuth
-stopwords = Str
 stopwords = iff
+stopwords = OAuth
+stopwords = PRs
+stopwords = Str
 -remove = Test::Synopsis
