@@ -111,6 +111,15 @@ you can configure one or more alternative namespaces by setting the git config
 key C<submit-work.question-namespaces>. This should be a space-separated list
 of namespaces under which questions can live.
 
+=head1 REQUESTER NAME IN PULL REQUESTS
+
+By default, the name of the PT story's requester will be included in the pull
+request text. This is helpful if you relay your project's PRs to Slack, as the
+requester can get alerted when their name is used.
+
+If you want to disable this, set the git config key
+C<submit-work.include-requester-name-in-pr> to C<0>.
+
 =head1 COMMAND LINE OPTIONS
 
 This tool accepts the following options:
