@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Added an option to include the PT requester's name in the PR text. If your
+  PRs are relayed to Slack or another communication mechanism this is an
+  additional way to alert someone that they have work to review.
+
+
 1.000008 2017-07-21
 
 - Fixed call to instantiate AskPullRequestQuestions object.
